--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 
 #messageArea {
-  min-width: 500px;
+  min-width: 450px;
 }
 
 #pref {
@@ -18,10 +18,6 @@
 /*Checkbox Changes*/
 
 .dark {
-    background-color: #4D4C4C;
+    background-color: #767676;
     color: white;
 }​
-
-.fark {
-  font-size: 20px;
-}
