Changed HTTPS back to HTTP. Shit broke.

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .scott-mode {
-  background: url('https://nashvillesoftwareschool.com/images/instructors/scott.jpg');
+  background: url('http://nashvillesoftwareschool.com/images/instructors/scott.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
